# CatsAndChocolateServer

./: .gitignore  README.md  manage.py  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
catsandchocolate/: asgi.py  logics.py  parameters.py  settings.py  urls.py  views.py  wsgi.py
